Remove colors from <pre> and <code> to prevent proper working of "dark mode"

--- a/dev/Styles/MessageView.less
+++ b/dev/Styles/MessageView.less
@@ -418,26 +418,21 @@
 
 						pre, code {
 							margin: 0;
-							padding: 0;
-							background: #fff;
 							border: none;
-							border-radius: 0;
-							font-family: var(--fontMono);
-							display: block;
 							word-break: normal;
 							word-wrap: break-word;
-							background-color: #f9f9f9;
 						}
 
 						code {
+							border-radius: 0;
 							display: inline;
 							padding: 2px 5px;
 						}
 
 						pre {
-							padding: 5px 10px;
 							border-radius: 5px;
-							background-color: #f9f9f9;
+							display: block;
+							padding: 5px 10px;
 						}
 
 						pre > code {
@@ -454,9 +449,7 @@
 						pre {
 							margin: 0;
 							padding: 0;
-							background: #fff;
 							border: none;
-							font-family: var(--fontMono);
 							display: block;
 							word-break: normal;
 						}
@@ -465,7 +458,6 @@
 							display: inline-block;
 							padding: 6px 10px;
 							border: 1px dashed #666;
-							background: #fff;
 							word-break: break-all;
 
 							&.success {
